# vast-outdated

./: .gitignore  CMakeLists.txt  README.md  libvolume  vast.kdev4
cmake-modules/: FindGLBINDING.cmake  FindGLM.cmake  FindSDL2.cmake  FindSFML.cmake
data/shaders/: nullfilter.frag  nullfilter.vert  postprocess.frag  postprocess.vert  rendercontext.cpp  standard.frag  standard.vert
data/shaders/120/: postprocess.frag  standard.frag  standard.vert
data/shaders/330/: nullfilter.frag  nullfilter.vert  postprocess.frag  standard.frag  standard.vert
data/test/: spaceship.blend  spaceship2.mtl  spaceship3.mtl
include/: CMakeLists.txt  app.h
include/app/: app.h  window.h
include/res/: box.h  manager.h
include/util/: gltype.h  io.h  mathtype.h  result.h  type.h  vectype.h
include/vast/: CMakeLists.txt
include/vast/com/atomic/: gltype.h  mathtype.h  type.h  vectype.h
include/vast/com/generic/: result.h
include/vast/com/io/: output.h
include/vast/com/resource/: box.h  manager.h
include/vast/com/util/: buildable.h
include/vast/sys/app/: app.h  timer.h  window.h
misc/plans/: features.txt
new/: meson.build
new/cross/: win32.txt  win64.txt
new/src/: main.cpp  meson.build
new/src/application/: application.cpp  application.h  meson.build
new/src/backend/: engine.cpp  engine.h  meson.build
new/src/common/: .resourceid.h.kate-swp  io.cpp  io.h  meson.build  resource.h  resourcecontainer.h  resourceid.h
new/src/common/resources/: meson.build  resource.h  resourcecontainer.h  resourceid.h
new/src/frontend/: context.cpp  context.h  meson.build
new/src/master/: game.cpp  game.h  meson.build
planning/: class-structure.dia  class-structure.dia~  structure.txt
planning/tests/: name_generator.py
planning/tests/bullet-physics/: .gitignore  build.sh  main.cpp
planning/uml/: 2.session  uml.prj
src/: CMakeLists.txt  main.cpp  settings.h.in
src/app/: CMakeLists.txt  app.cpp  window.cpp
src/application/: CMakeLists.txt  application.cpp  application.h  timer.cpp  timer.h
src/bodies/: CMakeLists.txt  planet.cpp  planet.h
src/common/: CMakeLists.txt  basictypes.h  generics.h  io.cpp  io.h  state.cpp  state.h
src/engine/: CMakeLists.txt  scene.cpp  scene.h  system.cpp  system.h
src/engine/entities/: CMakeLists.txt  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h
src/parasol/: common.h  context.h  hook.h  image.h  manager.h  resource.h  target.h  task.h
src/render/: CMakeLists.txt  bufferable.cpp  bufferable.h  camera.cpp  camera.h  renderable.cpp  renderable.h  rendercontext.cpp  rendercontext.h
src/render/figures/: CMakeLists.txt  figure.cpp  figure.h  figuremanager.cpp  figuremanager.h  part.cpp  part.h
src/render/lights/: CMakeLists.txt  light.cpp  light.h  lightmanager.cpp  lightmanager.h  sun.cpp  sun.h
src/render/renderer/: CMakeLists.txt  drawbuffer.cpp  drawbuffer.h  renderer.cpp  renderer.h
src/render/resources/: CMakeLists.txt  bufferedmesh.cpp  bufferedmesh.h  globject.h  hookable.h  image.h  material.cpp  material.h  mesh.cpp  mesh.h  rendercontext.cpp  resource.h  resourceid.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  shaderhook.cpp  shaderhook.h  texture.cpp  texture.h
src/render/structures/: CMakeLists.txt  face.h  polygon.cpp  polygon.h  vertex.h
src/res/: CMakeLists.txt  manager.cpp
src/util/: CMakeLists.txt  io.cpp
src/vast/: CMakeLists.txt
src/vast/com/: CMakeLists.txt
src/vast/com/io/: CMakeLists.txt  output.cpp
src/vast/com/resource/: manager.cpp
src/vast/com/util/: CMakeLists.txt  buildable.cpp
src/vast/sys/: CMakeLists.txt
src/vast/sys/app/: app.cpp  timer.cpp  window.cpp
src/vast/sys/base/: CMakeLists.txt  main.cpp
src/window/: CMakeLists.txt  inputstate.h  window.cpp  window.h
